plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/qNameToBoolean.xpath2
if (<error descr="Expected type 'xs:boolean', got 'xs:QName?'">node-name(/*)</error>) then true() else false()